# brainclouds2s-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile.ubuntu  Dockerfile.ubuntu_tests  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: Findlibwebsockets.cmake
include/: DefaultTCPSocket.h  DefaultWebSocket.h  IRTTCallback.h  IRTTConnectCallback.h  IServerCallback.h  ISocket.h  ITCPSocket.h  IWebSocket.h  OperationParam.h  RTTComms.h  ServerCall.h  ServiceName.h  ServiceOperation.h  TimeUtil.h  brainclouds2s-globalfilev3.h  brainclouds2s-prl.h  brainclouds2s-rtt.h  brainclouds2s.h
src/: DefaultTCPSocket.cpp  DefaultWebSocket.cpp  RTTComms.cpp  ServerCall.cpp  ServiceName.cpp  ServiceOperation.cpp  TimeUtil.cpp  brainclouds2s-globalfilev3.cpp  brainclouds2s-prl.cpp  brainclouds2s-rtt.cpp  brainclouds2s.cpp
test/: CMakeLists.txt
test/src/: main.cpp  tests.cpp  tests.h  testsRTT.cpp  testsS2S.cpp  testsS2SAutoAuth.cpp
tests/: CMakeLists.txt
tests/src/: S2SReporter.cpp  S2SReporter.h  catch.hpp  tests.cpp  tests.h  testsGlobalFileV3.cpp  testsLogs.cpp  testsRTT.cpp  testsS2S.cpp  testsS2SAutoAuth.cpp
